# Wave-Form

./: .gitignore  Cargo.toml  README
src/: helper.rs  main.rs
src/music/: downloader.rs  info.rs  mod.rs  player.rs  song.rs
src/ui/: components.rs  mod.rs  test.rs
src/wave/: command.rs  config.rs  mod.rs  test.rs
src/youtube/: video.rs
