[package]
name = "wave_form"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = "0.19"
id3 = "1.15.0"
crossterm = "0.25"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
rodio = "0.19.0"
serde_json = "1.0.129"
clap = { version = "4.5.20", features = ["derive"] }
dotenv = "0.15"
